gitops/self-service/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-service-portal
  namespace: self-service-portal
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: self-service-portal
  ports:
    - name: http
      port: 80
      targetPort: http
